--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,5 @@ POM_DEVELOPER_EMAIL=ed@spght.dev
 SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
 SONATYPE_AUTOMATIC_RELEASE=true
+SONATYPE_CONNECT_TIMEOUT_SECONDS=60
+SONATYPE_CLOSE_TIMEOUT_SECONDS=900
