--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,6 @@
 name: Publish Maven
+permissions:
+  contents: read
 
 on:
   release:
@@ -6,23 +8,31 @@ on:
   workflow_dispatch:
 
 jobs:
+  validation:
+    name: "Validate wrapper"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.2.2
+      - uses: gradle/actions/wrapper-validation@v4
+
   publish:
-    name: Release build and publish
+    needs: [validation]
+    name: "Release build and publish"
     runs-on: macos-latest
     steps:
-      - name: Checkout code
+      - name: "Checkout code"
         uses: actions/checkout@v4.2.2
 
-      - name: Set up JDK 17
+      - name: "Set up JDK 17"
         uses: actions/setup-java@v4.7.1
         with:
           distribution: 'zulu'
           java-version: 17
 
-      - name: Release build
-        run: ./gradlew assemble
+      - name: "Release build"
+        run: ./gradlew assemble --stacktrace
 
-      - name: Publish to MavenCentral
+      - name: "Publish to MavenCentral"
         run: |
           ./gradlew publishAllPublicationsToMavenCentralRepository --no-configuration-cache --stacktrace
         env:
