--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,8 +56,11 @@ jobs:
 
   build:
     needs: [ lint ]
-    name: "Build and run tests"
-    runs-on: macos-latest
+    name: "Build and test app"
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        api-level: [ 21, 35 ]
     steps:
       - name: "Checkout code"
         uses: actions/checkout@v4.2.2
@@ -69,3 +72,13 @@ jobs:
       - name: "Build with Gradle"
         run: |
           ./gradlew assemble --stacktrace
+      - name: "Enable KVM"
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+      - name: "Run tests"
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: ${{ matrix.api-level }}
+          script: ./gradlew connectedCheck
